Dummer Off-by-one-Bug beseitigt

--- a/config.template
+++ b/config.template
@@ -2,4 +2,4 @@
 use_config=Abfallwirtschaft_Hohenlohekreis
 
 [Abfallwirtschaft_Hohenlohekreis]
-types=Restmüll,BETty,Christbaum,Restmülltonne,Leichtverpackungen,Altpapier
+types=Restmüll,BETty,Christbaum,Leichtverpackungen,Altpapier
