--- a/config.template
+++ b/config.template
@@ -1,8 +1,11 @@
 [general]
-use_config=Abfallwirtschaft_Ortenaukreis
+use_config=Abfallwirtschaft_Hohenlohekreis
 
 [Abfallwirtschaft_Hohenlohekreis]
 types=Restmüll,BETty,Christbaum,Leichtverpackungen,Altpapier
 
 [Abfallwirtschaft_Ortenaukreis]
 types=Gelber Sack,Graue Tone,Grüne Tonne,Strauchgutabfuhr,Kreisputzete,Sperrmüll,Problemabfall
+
+[Landkreis_Heilbronn]
+types=Bioabfall,Papiertonne,Restmüll,Schadstoffe
