--- a/config.template
+++ b/config.template
@@ -9,3 +9,6 @@ types=Gelber Sack,Graue Tone,Grüne Tonne,Strauchgutabfuhr,Kreisputzete,Sperrmü
 
 [Landkreis_Heilbronn]
 types=Bioabfall,Papiertonne,Restmüll,Schadstoffe
+
+[Stadt Oldenburg]
+types=Restabfall,Gelber Sack,Bioabfall,Altpapier,Sommerbiotonne
