--- a/config.template
+++ b/config.template
@@ -42,3 +42,6 @@ types=Verpackungstonne,Bioabfall,Restabfall
 
 [AWB_Landkreis_Goeppingen]
 types=Bioabfall,Hausmüllcontainer,Hausmüll (2-wöchentlich),Hausmüll (4-wöchentlich),Papiertonne,Gelber Sack,Grüngutabfall
+
+[Landkreis_Schwaebisch_Hall]
+types=Bio- und Restmüllabfuhr,Gelbe Säcke,Papiertonne
