--- a/config.template
+++ b/config.template
@@ -1,6 +1,10 @@
 [general]
 use_config=Abfallwirtschaft_Hohenlohekreis
 
+[ASG_Wesel]
+types=Bioabfall,Gelber Sack / Gelbe Tonne,Grünschnitt,Papier,Restmüll,Schadstoffmobil
+
+
 [Stadtentsorgung_Rostock]
 types=Blaue Tonne,Gelbe Tonne,Schwarze Hausmülltonne
 
@@ -128,7 +132,18 @@ types=Leichtverpackungen,Biomüll,Papiermüll,Restmüll
 [RSAG]
 types=RSAG Bio-Großbehälter (2-wö.) für Wohnanlagen,RSAG Bio-Großbehälter Regelabfuhr für Wohnanlagen,RSAG Biotonne 2-wö.,RSAG Biotonne Regelabfuhr,RSAG Papier-Großbehälter (2-wö.) für Wohnanlagen,RSAG Papier-Großbehälter (4-wö.) für Wohnanlagen,RSAG Papiertonne 4-wö.,RSAG Restmüll-Großbehälter (2-wö.) für Wohnanlagen,RSAG Restmüll-Großbehälter (4-wö.) für Wohnanlagen,RSAG Restmüll-Großbehälter (wö.) für Wohnanlagen,RSAG Restmülltonne 2-wö.,RSAG Restmülltonne 4-wö.,RSAG Wertstoff-Großbehälter (2-wö.),RSAG Wertstoff-Großbehälter (4-wö.),RSAG Wertstofftonne oder -sack 4-wö.
 
+[ESTG_Kreis_Steinfurt]
+types=Biomüll,Papier,Restmüll,Restmüll 4-Wo,Schadstoffmobil,Sperrmüll,Tannenbaumaktion,Wertstoffsack
 
 [Landkreis_Garmisch_Partenkirchen]
 types=Biomüll,Gelber Sack,Papiersammlung,Restmüll,Schadstoffsammlung (Giftmobil)
+
+[Abfallwirtschaft_Rems_Murr]
+types=Biotonne,Christbäume,Gelbe Tonne / Container,Papiertonne / Container,Restmülltonne 2-wöchentliche Leerung,Restmülltonne 4-wöchentliche Leerung,Umweltmobil
+
+[ABW_Landkreis_Karlsruhe]
+types=Mobile Schadstoffsammlung,Restabfallbehaelter,Wertstoffbehaelter 
+
+[Landkreis_Boeblingen]
+types=Biomüll,Papier,Papier ab 1.100l,Restmüll,Wertstoffe
 
